2009-10-07  Ankit Jain  <jankit@novell.com>

	* ConsoleLogger.cs: Mark build as failed, if any project failed.

2009-10-06  Ankit Jain  <jankit@novell.com>

	* ConsoleLogger: Improve error reporting. Don't count failed task,
	target or project as another error. Show "errors" after "warnings",
	more useful to the user.
	* Project.cs (BuildTarget): Log error instead of using CWL.

2009-10-03  Ankit Jain  <jankit@novell.com>

	* Project.cs (OS): New.
	(InitializeProperties): Set 'OS' as a pre-defined property, set to
	'Windows_NT', 'Unix' or 'OSX' depending on the platform.

2009-10-02  Ankit Jain  <jankit@novell.com>

	* Expression.cs (Parse): Don't change '/' to '\\', not required.

2009-10-01  Ankit Jain  <jankit@novell.com>

	* Project.cs (AddImport): Show the correct source file name, when
	the import is in the main project file.

2009-10-01  Ankit Jain  <jankit@novell.com>

	Fix bug #543299.
	* Import.cs (.ctor): Evaluate and set EvaluatedProjectPath to
	the full path of the imported project here itself, instead of ..
	(Evaluate): .. here.
	* ImportCollection.cs (Add): Use import.EvaluatedProjectPath .
	(Contains): New.
	* Project.cs (AddImport): Don't process if condition is false.
	Warn if a circular reference is detected, and ignore the import.

2009-09-29  Ankit Jain  <jankit@novell.com>

	* GroupingCollection.cs (Evaluate): Mark internal.
	* Project.cs (AddImport): Only evaluate the properties,
	till before the import.

2009-09-29  Ankit Jain  <jankit@novell.com>

	* Project.cs (DoLoad): Don't use XmlReader.Create, for loading
	the project xml, as returned Xml*Reader normalizes the newlines.
	Instead directly use the TextReader with XmlDocument.Load ().

2009-09-27  Ankit Jain  <jankit@novell.com>

	* ConditionParser.cs: Show the condition being parsed in the
	exception message.

2009-09-26  Ankit Jain  <jankit@novell.com>

	* Expression.cs: Allow '-' in item, property and metadata names.

2009-09-26  Ankit Jain  <jankit@novell.com>
