@@ -1,3 +1,9 @@
+2009-10-08  Ankit Jain  <jankit@novell.com>
+
+	* TaskBatchingImpl.cs (ParseTaskAttributes): Parse attributes
+	of the 'Output' element also.
+	* TaskEngine.cs (PublishOutput): Honor condition on 'Output' also.
+
 2009-10-07  Ankit Jain  <jankit@novell.com>
 
 	* ConsoleLogger.cs: Mark build as failed, if any project failed.
